[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/day_flower_seed.png" type="Texture" id=1]
[ext_resource path="res://scripts/Plant.gd" type="Script" id=2]
[ext_resource path="res://assets/lightmask.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 107.5
height = 80.0

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="Plant" type="Node2D" groups=["dual", "plants"]]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 20
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5, -82.5 )
texture = ExtResource( 1 )

[node name="Light" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )
mode = 2
range_z_min = -4096
range_z_max = 4096

[node name="FarShape" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="FarShape"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
